--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header img {
 }
 
 h1 {
-  color: #333;
+  color: white;
 }
 
 ul.contact {
@@ -50,46 +50,26 @@ section {
   display: block;
   margin: 20px auto;
   padding: 10px;
-  background-color: #3498db;
-  color: #fff;
+  background-color: white;
+  color: black;
   border: none;
   cursor: pointer;
 }
 
+.Work h2,
 .Education h2,
 .Achievements h2,
 .Seminars h2,
-.Organizations h2 {
-  color: #3498db;
+.Organizations h2,
+.Skills h2 {
+  color: white;
 }
 
-.Education h2,
-.Achievements h2,
-.Seminars h2,
-.Organizations h2 {
-  color: #3498db;
+.gif-container {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.Education h2,
-.Achievements h2,
-.Seminars h2,
-.Organizations h2 {
-  color: #3498db;
-}
-
-#switch-button {
-  display: block;
-  margin: 20px auto;
-  padding: 10px;
-  background-color: #3498db;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-.Education h2,
-.Achievements h2,
-.Seminars h2,
-.Organizations h2 {
-  color: #3498db;
+.gif-container img {
+  max-width: 100%;
 }
